# gr-quadratiq

./: CMakeLists.txt  MANIFEST.md  README
cmake/Modules/: quadratiqConfig.cmake
docs/: README.quadratiq
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: quadratiq_example.grc
grc/: CMakeLists.txt  quadratiq_qdiq_source_s.xml  quadratiq_qdiq_source_s.xml~  quadratiq_qtiq_source_s.xml  quadratiq_source.grc
include/quadratiq/: CMakeLists.txt  api.h  qdiq_source_s.h  qtiq_source_s.h
lib/: CMakeLists.txt  bit_ops.h  qdiq_source_s_impl.cc  qdiq_source_s_impl.h  qtiq_source_s_impl.cc  qtiq_source_s_impl.h  qtiq_vrt.cc  qtiq_vrt.h  srfs_interface.cc  srfs_interface.h
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  quadratiq_swig.i
